[package]
name = "travel"
version = "0.1.0"
edition = "2021"
description = "Ein Programm das einen Weg durch mehrere Punkte finden kann ohne mehr als 90° abzubiegen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#lto=true

[dependencies]
rand = "0.8.5"
itertools = "0.10.5"
imageproc = "0.23.0"
image = "0.24.5"
rusttype = "0.9.3"
clap = { version = "4.2.1", features = ["derive"] }
